# ai-chatbot

./: .gitignore
backend/: package-lock.json
backend/src/: app.ts  index.ts
backend/src/db/: connection.ts
llm/: app.py  pyproject.toml
